--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
+    "@openzeppelin/contracts": "^5.2.0",
+    "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "framer-motion": "^12.0.6",
     "next": "15.1.6",
@@ -21,8 +23,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "hardhat": "^2.22.18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
