--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "framer-motion": "^12.0.6",
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.9.5",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
